--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <div class="container">
   <header>
-  <img src=".\assets\images\avatar-jessica.jpeg" alt="">
+  <img src="./assets/images/avatar-jessica.jpeg" alt="jessica">
   <h1> Jessica Randall</h1>
   <h4> London, United Kingdom</h4>
   <p>"Front-end developer and avid reader."</p>
