--- a/index.html
+++ b/index.html
@@ -1,48 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="styles.css">  
+  <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | Social links profile</title>
 
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
-<body>
-<div class="container">
-  <header>
-  <img src="./assets/images/avatar-jessica.jpeg" alt="jessica">
-  <h1> Jessica Randall</h1>
-  <h4> London, United Kingdom</h4>
-  <p>"Front-end developer and avid reader."</p>
-</header>
-  <div >
-  <p>GitHub</p>
-  </div>
-  <div >
-    <p>Frontend Mentor</p>
-    </div>
-    <div >
-      <p>LinkedIn</p>
-      </div>
-      <div >
-        <p>Twitter</p>
-        </div>
-        <div >
-          <p>Instagram
-          </p>
-          </div>
 
-</div>
+<body>
+  <div class="container">
+    <header>
+      <img src="./assets/images/avatar-jessica.jpeg" alt="jessica">
+      <h1> Jessica Randall</h1>
+      <h4> London, United Kingdom</h4>
+      <p>"Front-end developer and avid reader."</p>
+    </header>
+    <div>
+      <a href="https://github.com/" target="_blank"><p>GitHub</p></a>
+    </div>
+    <div>
+      <a href="https://www.frontendmentor.io/" target="_blank"><p>Frontend Mentor</p> </a>
+    </div>
+    <div>
+       <a href="https://www.linkedin.com/" target="_blank"><p>LinkedIn</p></a>
+    </div>
+    <div>
+     <a href="https://twitter.com/" target="_blank"> <p>Twitter</p> </a>  
+    </div>
+    <div>
+      <a href="https://www.instagram.com/" target="_blank"> <p>Instagram</p></a>
+      
+    </div>
+
+  </div>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+
 </html>
